--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,12 @@ body {
 .content-footer,
 .masthead-heading,
 .masthead-intro {
-  text-align: left;
+  text-align: center;
 }
 
 .masthead {
   padding: 6em 0;
-  background-image: url('../img/code.jpg');
+  background-image: url('../img/code.jp');
   background-size: cover;
   background-repeat: no-repeat;
 }
